--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,25 @@
 
+
+.button {
+      background-color: #4CAF50; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+}
+
+
+.button #web_dev{
+  background-color: #4CAF50;;
+
+}
+
+.button #game_dev{
+  background-color: #e7e7e7;
+}
 .mynav {
     min-height: 5em;
     font-size: 1.25em;
@@ -92,4 +113,8 @@ nav .navgroup .navlink:hover {
         display: flex;
         flex-direction: column;
     }
+}
+
+.forms{
+  background-color: #F0FFFF;
 }
